--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #root {
   width: 100%;
   margin: 0;
@@ -10,14 +16,14 @@
   padding-left: 3%;
   padding-right: 3%;
   height: 30px;
-  width: 100%;
+  width: 100vw;
   margin: 0;
 }
 
 .about {
   background-color: blueviolet;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
 }
 
 .contact {
@@ -35,11 +41,12 @@
 .my-work {
   background-color: rgb(230, 160, 29);
   width: 100vw;
-  height: 100%;
+  height: 100vh;
 }
 
 .my-work .work-container .links-to-work {
   display: grid;
+  padding: 30px;
   grid-template-columns: repeat(2, 1fr); /* 4 columns with equal width */
   grid-template-rows: repeat(2, auto);  /* 4 rows, height adjusts to content */
   gap: 20px; /* Space between grid items */
@@ -52,8 +59,8 @@
   justify-content: center;
   align-items: center;
   background-color: cornsilk;
-  width: 200px;
-  margin-left: 120px;
+  /* width: 200px;
+  margin-left: 120px; */
   border-radius: 30px 30px 30px 30px;
   box-shadow: 5px 5px 5px 0px rgba(30,30,30,0.75);
   
