--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,20 @@
   height: 100vh;
 }
 
-.contact {
+.contact-form {
   background-color: rgb(20, 156, 52);
   width: 100vw;
   height: 100vh;
+}
+
+.contact-form .name-feild, .email-feild, .message-feild {
+  font-family: monospace;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
 }
 
 .home {
@@ -49,6 +59,7 @@
   padding: 30px;
   grid-template-columns: repeat(2, 1fr); /* 4 columns with equal width */
   grid-template-rows: repeat(2, auto);  /* 4 rows, height adjusts to content */
+  align-items: center;
   gap: 20px; /* Space between grid items */
   /* width: 100%; */
 }
@@ -59,8 +70,7 @@
   justify-content: center;
   align-items: center;
   background-color: cornsilk;
-  /* width: 200px;
-  margin-left: 120px; */
+  /* margin-left: 120px; */
   border-radius: 30px 30px 30px 30px;
   box-shadow: 5px 5px 5px 0px rgba(30,30,30,0.75);
   
